<resources>
    <string name="app_name">MiniPOS</string>
    <string name="powered_by">Designed by Vitu</string>
    <string name="get_started_btn">Get Started</string>
    <string name="skip_btn">Skip</string>
    <string name="first_slide_title">Easier Management</string>
    <string name="second_slide_title">Reports</string>
    <string name="third_slide_title">Products Threshold</string>
    <string name="first_slide_desc">Manage your inventory from anywhere from your phone</string>
    <string name="second_slide_desc">Offers well detailed reports</string>
    <string name="third_slide_desc">Alerts you if you are running out of stock</string>
    <string name="pos_terminal">POS Terminal</string>
    <string name="stock_in">Stock In</string>
    <string name="management">Managements</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="signout">Sign Out</string>
    <string name="slogan_name">Management Made Easy</string>
    <string name="logo_name">MiniPOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="supplier">Supplier</string>
    <string name="add_supplier_txt">Add Supplier</string>
    <string name="products">Products</string>
    <string name="quantity_txt">Quantity</string>
    <string name="stock_remaining_txt">Stock Remaining</string>
    <string name="product_name_sample_txt">Vaseline</string>
    <string name="prod_price">Price</string>
    <string name="discard_txt">Discard</string>
    <string name="due_amount">Due Amount</string>
    <string name="apply_vat">Apply VAT</string>
    <string name="inventory">Inventory</string>
    <string name="save_changes">Save Changes</string>
    <string name="reset_changes">Reset</string>
    <string name="contact">Contact</string>
    <string name="apply_tax_by_default">Apply Tax by default?</string>
    <string name="use_default_curreny_and_format">Use default currency symbol and format?</string>
    <string name="connect_printer">Connect Printer</string>
    <string name="connection">Connection: </string>
    <string name="paper_size">Paper Size: </string>
    <string name="miscellaneous">Miscellaneous</string>
</resources>