<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PrinterSettingsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus />
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimary" />

    <!--Top Header Layout-->
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:src="@drawable/arrow_back_icon"
            app:tint="@color/white" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Printer Settings"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/delCategoryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toLeftOf="@id/checks"
            android:background="@color/lightWhite"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:padding="5dp"
            android:src="@drawable/close_icon"
            app:tint="@color/red" />

        <ImageButton
            android:id="@+id/checks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:background="@color/lightWhite"
            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:padding="5dp"
            android:src="@drawable/ic_check_circle_black_24dp"
            app:tint="@color/white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circularbordersolid"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">


            <!--Option Bar-->


            <!--Bootom Cards with sections-->
            <LinearLayout
                android:id="@+id/personalinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <!--Contact Details-->
                <LinearLayout
                    android:layout_marginBottom="100dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/connect_printer"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <Switch
                            android:id="@+id/defaultFormatSwitch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="Switch to allow app connect to printer" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/grey"
                            android:fontFamily="@font/roboto_bold"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="Printer Config"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:fontFamily="@font/poppins"
                                android:text="@string/connection" />

                            <RadioGroup

                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:checked="true"
                                    android:id="@+id/radioBtnBluetooth"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="Bluetooth" />

                                <RadioButton
                                    android:id="@+id/radioBtnWifi"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="Wi-Fi" />
                            </RadioGroup>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:fontFamily="@font/poppins"
                                android:text="@string/paper_size" />

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:checked="true"
                                    android:id="@+id/radioBtn58mm"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="58mm." />

                                <RadioButton
                                    android:id="@+id/radioBtn88mm"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="88mm." />
                            </RadioGroup>
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="Receipt"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/headerReceipt"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Header Ex. Sale Receipt"
                            android:layout_marginTop="10dp"
                            app:boxStrokeWidthFocused="1dp"
                            app:endIconDrawable="@drawable/close_icon"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:inputType="textPersonName"
                                android:textColor="#000" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/footerReceipt"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="Footer Ex. Thank you for your purchase"
                            app:boxStrokeWidthFocused="1dp"
                            app:endIconDrawable="@drawable/close_icon">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:inputType="textPersonName"
                                android:textColor="#000" />


                            <TextView
                                android:layout_marginTop="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:fontFamily="@font/roboto_bold"
                                android:text="@string/miscellaneous"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <Switch
                                android:layout_marginBottom="10dp"
                                android:id="@+id/showAddressPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="Show store email/phone" />
                            <Switch
                                android:id="@+id/showAddressSwitch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="Show store address" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>